Compiler/tests/typing2/good/testfile-borrow_mut-2.rs

fn main() { let mut x = 41; { let y = &mut x; *y = *y + 1; } }
