Compiler/tests/typing2/bad/testfile-borrow-3.rs

fn main() { let mut x = 40; let y = &mut x; *y = *y + 1; x = x + 1; }
